--- a/index.html
+++ b/index.html
@@ -4,56 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <title>Studio</title>
 </head>
 <body>
    <header>
-        <a href="">webstudio</a>
+        <a href="" class="header-logo"><span>web</span>studio</a>
         <nav>
-            <ul>
+            <ul class="site-nav">
                 <li><a href="./index.html">Studio</a></li>
                 <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="auth-nav">
             <li><a href="">info@devstudio.com</a></li>
             <li><a href="">+11 (000) 111-11-11</a></li>
         </ul>
     </header>
     <main>
         <!--Hero-->
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="button">Order Service</button>
         </section>
         <!--Our advantages-->
-        <section>
+        <section class="section">
             <!--Заголовок цієї секції буде приховано через CSS-->
-            <h2>Our advantages</h2>
-            <ul>
+            <h2 class="section-title">Our advantages</h2>
+            <ul class="feutere-list">
                 <li>
-                    <h3>Strategy</h3>
+                    <h3 class="title">Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h3 class="title">Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
+                    <h3 class="title">Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h3 class="title">Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <!--Areas of activity-->
-        <section>
-            <h2>What are we doing</h2>
+        <!--Our work-->
+        <section class="section">
+            <h2 class="section-title">What are we doing</h2>
             <ul>
                 <li>
                     <img src="./images/img1.jpg" alt="Developing" width="360" height="300">
@@ -63,39 +69,34 @@
             </ul>
         </section>
         <!--Our Team-->
-        <section>
-            <h2>Our Team</h2>
+        <section class="employees">
+            <h2 class="section-title">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/1proddesigner.jpg" alt="Product Designer" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
+                    <h3 class="title">Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/2developer.jpg" alt="Frontend Developer" width="264" height="260">
-                    <h3>Tom Ford</h3>
+                    <h3 class="title">Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/3marketing.jpg" alt="Marketing" width="264" height="260">
-                    <h3>Camila Garcia</h3>
+                    <h3 class="title">Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/4designer.jpg" alt="UI Designer" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
+                    <h3 class="title">Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
-            </ul>
-            <ul class="social-links">
-                <li><a class="link" href="https://twitter.com">Twitter</a></li>
-                <li><a class="link" href="https://www.instagram.com">Instagram</a></li>
-                <li><a class="link" href="https://www.facebook.com">Facebook</a></li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="">webstudio</a>
+        <a href="" class="footer-logo"><span>web</span>studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
