--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,6 @@
                 <li><button type="button">Design</button></li>
                 <li><button type="button">Marketing</button></li>
             </ul>
-        </section>
-        <section>
             <h2>Our portfolio</h2>
             <ul>
                 <li>
@@ -85,7 +83,7 @@
         </section>
     </main>
     <footer>
-        <a href="">webstudio</a>
+        <a href=""><span>web</span>studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
