--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-
+    
     <link rel="stylesheet" href="./css/styles.css">
     <title>Studio</title>
 </head>
@@ -18,49 +18,49 @@
         <a href="" class="header-logo"><span>web</span>studio</a>
         <nav>
             <ul class="site-nav">
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a class="link" href="./index.html">Studio</a></li>
+                <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="link" href="">Contacts</a></li>
             </ul>
         </nav>
         <ul class="auth-nav">
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+11 (000) 111-11-11</a></li>
+            <li><a class="link" href="">info@devstudio.com</a></li>
+            <li><a class="link" href="">+11 (000) 111-11-11</a></li>
         </ul>
     </header>
     <main>
         <!--Hero-->
         <section class="hero">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button type="button" class="button">Order Service</button>
+            <button type="button" class="btn-primery">Order Service</button>
         </section>
         <!--Our advantages-->
         <section class="section">
             <!--Заголовок цієї секції буде приховано через CSS-->
             <h2 class="section-title">Our advantages</h2>
-            <ul class="feutere-list">
+            <ul class="features-list">
                 <li>
                     <h3 class="title">Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
                     <h3 class="title">Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
                     <h3 class="title">Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
                     <h3 class="title">Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
         <!--Our work-->
         <section class="section">
             <h2 class="section-title">What are we doing</h2>
-            <ul>
+            <ul class="work-list">
                 <li>
                     <img src="./images/img1.jpg" alt="Developing" width="360" height="300">
                     <img src="./images/img2.jpg" alt="Prototyping" width="360" height="300">
@@ -69,35 +69,35 @@
             </ul>
         </section>
         <!--Our Team-->
-        <section class="employees">
+        <section class="section">
             <h2 class="section-title">Our Team</h2>
-            <ul>
+            <ul class="employees-list">
                 <li>
                     <img src="./images/1proddesigner.jpg" alt="Product Designer" width="264" height="260">
                     <h3 class="title">Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <p class="text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/2developer.jpg" alt="Frontend Developer" width="264" height="260">
                     <h3 class="title">Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/3marketing.jpg" alt="Marketing" width="264" height="260">
                     <h3 class="title">Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <p class="text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/4designer.jpg" alt="UI Designer" width="264" height="260">
                     <h3 class="title">Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <p class="text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="" class="footer-logo"><span>web</span>studio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a href="" class="logo"><span>web</span>studio</a>
+        <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
