Update style.css file

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Studio</title>
 </head>
 <body>
-   <header>
-        <a href="" class="header-logo"><span>web</span>studio</a>
+   <header class="header">
+        <a href="" class="logo"><span>web</span>studio</a>
         <nav>
             <ul class="site-nav">
                 <li><a class="link" href="./index.html">Studio</a></li>
