--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 </head>
 <body>
    <header class="header">
-        <a href="" class="logo"><span>web</span>studio</a>
+        <a href="" class="logo link"><span class="logo-color">web</span>studio</a>
         <nav>
-            <ul class="site-nav">
+            <ul class="site-nav mark">
                 <li><a class="link" href="./index.html">Studio</a></li>
                 <li><a class="link" href="./portfolio.html">Portfolio</a></li>
                 <li><a class="link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <ul class="auth-nav">
+        <ul class="auth-nav mark">
             <li><a class="link" href="">info@devstudio.com</a></li>
             <li><a class="link" href="">+11 (000) 111-11-11</a></li>
         </ul>
@@ -38,7 +38,7 @@
         <section class="section">
             <!--Заголовок цієї секції буде приховано через CSS-->
             <h2 class="section-title">Our advantages</h2>
-            <ul class="features-list">
+            <ul class="features-list mark">
                 <li>
                     <h3 class="title">Strategy</h3>
                     <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
@@ -60,7 +60,7 @@
         <!--Our work-->
         <section class="section">
             <h2 class="section-title">What are we doing</h2>
-            <ul class="work-list">
+            <ul class="work-list mark">
                 <li>
                     <img src="./images/img1.jpg" alt="Developing" width="360" height="300">
                     <img src="./images/img2.jpg" alt="Prototyping" width="360" height="300">
@@ -71,7 +71,7 @@
         <!--Our Team-->
         <section class="section">
             <h2 class="section-title">Our Team</h2>
-            <ul class="employees-list">
+            <ul class="employees-list mark">
                 <li>
                     <img src="./images/1proddesigner.jpg" alt="Product Designer" width="264" height="260">
                     <h3 class="title">Mark Guerrero</h3>
@@ -96,7 +96,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="" class="logo"><span>web</span>studio</a>
+        <a href="" class="logo link"><span class="logo-color">web</span>studio</a>
         <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
