--- a/portfolio.html
+++ b/portfolio.html
@@ -15,15 +15,15 @@
 </head>
 <body>
     <header class="header">
-        <a href="" class="logo"><span>web</span>studio</a>
+        <a href="" class="logo link"><span class="logo-color">web</span>studio</a>
         <nav>
-            <ul class="site-nav">
+            <ul class="site-nav mark">
                 <li><a class="link" href="./index.html">Studio</a></li>
                 <li><a class="link" href="./portfolio.html">Portfolio</a></li>
                 <li><a class="link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <ul class="auth-nav">
+        <ul class="auth-nav mark">
             <li><a class="link" href="">info@devstudio.com</a></li>
             <li><a class="link" href="">+11 (000) 111-11-11</a></li>
         </ul>
@@ -31,7 +31,7 @@
     <main>
         <section>
             <h2>Filter</h2>
-            <ul>
+            <ul class="mark">
                 <li><button class="btn-secondary" type="button">All</button></li>
                 <li><button class="btn-secondary" type="button">Web Site</button></li>
                 <li><button class="btn-secondary" type="button">App</button></li>
@@ -39,7 +39,7 @@
                 <li><button class="btn-secondary" type="button">Marketing</button></li>
             </ul>
             <h2>Our portfolio</h2>
-            <ul class="projects-list">
+            <ul class="projects-list mark">
                 <li>
                     <img src="./images/banking.jpg" alt="Banking App" width="360" height="300">
                     <h3 class="title">Banking App Interface Concept</h3>
@@ -89,7 +89,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="" class="logo"><span>web</span>studio</a>
+        <a href="" class="logo link"><span class="logo-color">web</span>studio</a>
         <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
     </footer>
